Fix internal logo on mobile

--- a/app/_assets/_scss/_components.header.scss
+++ b/app/_assets/_scss/_components.header.scss
@@ -15,16 +15,12 @@
         border-radius: 50%;
     }
 
-    .header__title,
-    .header__byline {
-        line-height: 1.1em;
-    }
-
     .header__title {
         margin-top: halve($inuit-base-spacing-unit);
         margin-bottom: $inuit-base-spacing-unit;
         font-weight: 600;
         font-size: 40px;
+        line-height: 1.1em;
 
         a {
             text-decoration: none;
@@ -35,7 +31,7 @@
 
             // create "button-like" style
             display: inline-block;
-            width: 66px;
+            width: 1.1em;
 
             color: $color-background;
             background-color: $color-attention;
